<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="header_one">Вопрос:</string>
    <string name="value_one" translatable="false">2/10</string>
    <string name="question">Рейтинг этого фильма больше, чем 9?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="header_share">Поделиться приложением</string>
    <string name="header_support">Написать в поддержку</string>
    <string name="header_agreement">Пользовательское соглашение</string>
    <string name="uri_yandex_course" translatable="false">https://practicum.yandex.ru/catalog/programming/</string>
    <string name="default_user" translatable="false">DefaultUser</string>
    <string name="email" translatable="false">example@example.example</string>
    <string name="email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="uri_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="input_clear">Очистить</string>
    <string name="name_track">Название трека</string>
    <string name="name_group">Группа</string>
    <string name="inter_punctum" translatable="false">·</string>
    <string name="length_track">длина трека</string>
    <string name="track_selection">Выбор трека</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="header_search">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="time_track" translatable="false">0:00</string>
    <string name="header_length_track">Длительность</string>
    <string name="header_album">Альбом</string>
    <string name="name_album">Название альбома</string>
    <string name="header_year_album">Год</string>
    <string name="default_string" translatable="false">—</string>
    <string name="header_genre">Жанр</string>
    <string name="header_country">Страна</string>
    <string name="time_track_reverse" translatable="false">0:30</string>
    <string name="no_connection">Проверьте подключение к интернету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="media_library">Медиатека</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="has_duplicate_playlist">"Playlist с таким названием уже существует"</string>
    <string name="finish_creating_the_playlist">"Завершить создание плейлиста?"</string>
    <string name="all_unsaved_data_will_be_lost">"Все несохраненные данные будут потеряны"</string>
    <string name="cancel">"Отмена"</string>
    <string name="finish">"Завершить"</string>
    <string name="delete">"Удалить"</string>
    <string name="message_success_add_playlist">"Плейлист %1$s создан"</string>
    <string name="message_success_edit_playlist">"Плейлист %1$s обновлён"</string>
    <string name="name_playlist">Название плейлиста</string>
    <string name="number_tracks_default">Количество треков</string>
    <plurals name="number_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <string name="add_track_in_playlist">Добавлено в плейлист %1$s</string>
    <string name="no_add_track_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="default_playlist_meta_data">0 минут · 0 треков</string>
    <plurals name="value_time">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="title_delete_track">Удалить трек</string>
    <string name="question_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="question_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="failed_to_delete_track">Удалить трек не удалось</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="message_empty_playlist">В плейлисте треки отсутствуют</string>
    <string name="message_empty_track">Отсутствует трек для добавления в плейлист</string>
</resources>