<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".playlist.presentation.ui.PlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_700">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="@dimen/dimen_48"
            android:layout_height="@dimen/dimen_48"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/album_playlist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_24"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_placeholder" />

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_48"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_bold"
            android:maxLines="1"
            android:text="@string/name_playlist"
            android:textColor="@color/grey_100"
            android:textFontWeight="700"
            android:textSize="@dimen/dimen_24s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_playlist" />

        <TextView
            android:id="@+id/playlist_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/description"
            android:textColor="@color/grey_100"
            android:textFontWeight="400"
            android:textSize="@dimen/dimen_18s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_name" />

        <TextView
            android:id="@+id/playlist_meta_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/default_playlist_meta_data"
            android:textColor="@color/grey_100"
            android:textFontWeight="400"
            android:textSize="@dimen/dimen_18s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_description" />

        <ImageView
            android:id="@+id/button_share"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:src="@drawable/ic_share_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_meta_data" />

        <ImageView
            android:id="@+id/button_menu"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_10"
            android:src="@drawable/ic_menu_playlist"
            app:layout_constraintStart_toStartOf="@+id/button_share"
            app:layout_constraintTop_toBottomOf="@+id/playlist_meta_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bottom_sheet"
        android:orientation="vertical"
        android:visibility="visible"
        app:behavior_hideable="true"
        app:behavior_peekHeight="250dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/dimen_24"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_track_list"
            android:visibility="visible"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>